need to fixup the friends query
