# routes/api.php
@@ -49,6 +49,14 @@ Route::group(['middleware' => ['auth:api', 'verifiedPhone']], function () {
     Route::apiResource('activities', 'ActivityLogController', ['only' => [
         'index', 'store', 'show', 'update', 'destroy']])->middleware(['role:admin|staff|subscriber']);
 
+    # Handel friends request
+    Route::get('friends', 'FriendshipsController@friendList');
+    Route::post('friends/send-request/{id}', 'FriendshipsController@sendFriendRequest');
+    Route::post('friends/accept-request/{id}', 'FriendshipsController@acceptFriendRequest');
+    Route::post('friends/deny-request/{id}', 'FriendshipsController@denyFriendRequest');
+    Route::post('friends/un-friend/{id}', 'FriendshipsController@removeFriend');
+    Route::get('friends/pending-requests', 'FriendshipsController@pendingRequests');
+
     # Handel followers request
     Route::get('followers', 'BeFollowerController@followingList');
     Route::post('followers/send-follow-request/{id}', 'BeFollowerController@sendFollowRequest');
